log
Thu Mar 26 07:04:37 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
69a606d
Thu Mar 26 07:15:19 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:93:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   93 |     void* dato = aux->data;
      |           ^~~~
cc1: all warnings being treated as errors
9183163
Thu Mar 26 07:20:52 PM UTC 2026: 
 list.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  0|0
1b702c8
Thu Mar 26 07:30:05 PM UTC 2026: 
 list.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  0|0
f4a7502
Thu Mar 26 07:31:58 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/60
1236219
Thu Mar 26 07:32:34 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/60
8e640b9
Thu Mar 26 07:33:08 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/60
cbe4610
Thu Mar 26 07:35:07 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
5ff348d
Thu Mar 26 07:37:50 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:49: error: expected ‘,’ or ‘;’ before ‘¨’
   35 |     List* nuevaL = (List*) malloc(sizeof(List*))¨;
      |                                                 ^
954469f
Thu Mar 26 07:38:00 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:11: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   36 |     nuevaL->head= NULL;
      |           ^~
list.c:35:28: note: object of size 8 allocated by ‘malloc’
   35 |     List* nuevaL = (List*) malloc(sizeof(List*));
      |                            ^~~~~~~~~~~~~~~~~~~~~
list.c:37:11: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   37 |     nuevaL->tail= NULL;
      |           ^~
list.c:35:28: note: object of size 8 allocated by ‘malloc’
   35 |     List* nuevaL = (List*) malloc(sizeof(List*));
      |                            ^~~~~~~~~~~~~~~~~~~~~
list.c:38:11: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   38 |     nuevaL->current= NULL;
      |           ^~
list.c:35:28: note: object of size 8 allocated by ‘malloc’
   35 |     List* nuevaL = (List*) malloc(sizeof(List*));
      |                            ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
e004365
Thu Mar 26 07:41:18 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
d6418c2
Thu Mar 26 07:43:51 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
e7bfafa
Thu Mar 26 07:47:49 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
1621113
Thu Mar 26 07:48:41 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
60ebba0
Thu Mar 26 07:50:30 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
825783e
Thu Mar 26 07:51:11 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
744b66c
Thu Mar 26 07:51:57 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6a0ac76
Thu Mar 26 07:53:05 PM UTC 2026: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
da55060
Thu Mar 26 07:55:25 PM UTC 2026: 
 tests:  0|0
1e6d3d2
Thu Mar 26 07:55:56 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
69d55fa
Thu Mar 26 07:59:23 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 30/60
ec36b61
Thu Mar 26 08:04:48 PM UTC 2026: 
 list.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  7|3
total_score: 30/60
dbbb490
Thu Mar 26 08:07:23 PM UTC 2026: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:93:12: error: ‘data’ undeclared (first use in this function); did you mean ‘dato’?
   93 |     return data;
      |            ^~~~
      |            dato
list.c:93:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:91:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   91 |     void* dato = curr->prev->data;
      |           ^~~~
list.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
c09e5ff
Thu Mar 26 08:07:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
5071d59
Fri Mar 27 12:42:04 AM UTC 2026: 
 tests:  10|2
total_score: 40/60
6fc8282
Fri Mar 27 12:56:29 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
6697c67
Fri Mar 27 01:02:11 AM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 40/60
4dff3b5
Fri Mar 27 01:02:48 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/60
211f560
Fri Mar 27 01:13:47 AM UTC 2026: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:122:39: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  122 |     if (list->current == NULL) return NULL; //creo q hay q actualizar
      |                                       ^~~~
list.c:120:6: note: declared here
  120 | void pushCurrent(List * list, void * data) { //agrega dato dsps de current
      |      ^~~~~~~~~~~
a6cef6d
Fri Mar 27 01:14:11 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:122:39: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  122 |     if (list->current == NULL) return 0; //creo q hay q actualizar
      |                                       ^
list.c:120:6: note: declared here
  120 | void pushCurrent(List * list, void * data) { //agrega dato dsps de current
      |      ^~~~~~~~~~~
9d61fae
Fri Mar 27 01:14:39 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 50/60
1332286
Fri Mar 27 01:15:03 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|0
total_score: 60/60
3da1aba
Fri Mar 27 01:25:54 AM UTC 2026: 
 list.c | 20 +++++++++++++-------
 1 file changed, 13 insertions(+), 7 deletions(-)
 tests:  12|0
total_score: 60/60
6428525
Fri Mar 27 01:30:11 AM UTC 2026: 
 tests:  12|0
total_score: 60/60
3e4af18
